--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,7 +3,8 @@
 
 <head lang="en">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" media="screen"/>
+    <link href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet"
+          media="screen"/>
     <link href="../../static/css/style.css" th:href="@{css/style.css}" rel="stylesheet" media="screen"/>
 </head>
 
@@ -19,23 +20,20 @@
                         <li><a href="#" th:href="@{/customers}">Customer</a></li>
                         <li><a href="#" th:href="@{/products}">Product</a></li>
                     </ul>
-
                 </div>
             </div>
         </nav>
-
-        <div class="jumbotron">
-            <div class="row text-center">
-                <div class="">
-                    <h2>Coffee Shop</h2>
-                    <h3>Hola</h3>
-                </div>
-            </div>
-            <div class="row text-center">
-                <img src="../../static/images/boot.png" width="200" th:src="@{/images/boot.png}"/>
-            </div>
-        </div>
-
+            <!--<div class="jumbotron">-->
+                <!--<div class="row text-center">-->
+                    <!--<div class="">-->
+                        <!--<h2>Coffee Shop</h2>-->
+                        <!--<h3>Hola</h3>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="row text-center">-->
+                    <!--<img src="../../static/images/boot.png" width="200" th:src="@{/images/boot.png}"/>-->
+                <!--</div>-->
+            <!--</div>-->
     </div>
 </div>
 </body>
