--- a/src/main/resources/templates/salePage.html
+++ b/src/main/resources/templates/salePage.html
@@ -24,6 +24,12 @@
                 </div>
             </div>
             <div class="form-group">
+                <label class="col-sm-2 control-label">TotPoint:</label>
+                <div class="col-sm-10">
+                    <p class="form-control-static" th:text="${customer.totPoint}">Address</p>
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="col-sm-2 control-label">Address:</label>
                 <div class="col-sm-10">
                     <p class="form-control-static" th:text="${customer.address}">Address</p>
