--- a/src/main/resources/templates/salePage.html
+++ b/src/main/resources/templates/salePage.html
@@ -7,6 +7,8 @@
 <body>
 <div class="container">
     <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
+    <div class="alert alert-info" th:if="${outOfStockMessage}" th:utext="${outOfStockMessage}"></div>
+
     <h2>Customer Info</h2>
     <div>
         <form class="form-horizontal">
@@ -26,7 +28,13 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label">TotPoint:</label>
                 <div class="col-sm-10">
-                    <p class="form-control-static" th:text="${customer.totPoint}">Address</p>
+                    <p class="form-control-static" th:text="${customer.totPoint}">TotPoint</p>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">AvaPoint:</label>
+                <div class="col-sm-10">
+                    <p class="form-control-static" th:text="${customer.avaPoint}">AvaPoint</p>
                 </div>
             </div>
             <div class="form-group">
@@ -61,6 +69,9 @@
         <h2 th:text="${total}"></h2>
         <div class="row">
             <button type="button" class="btn btn-default"><a href="#" th:href="@{/sale/checkout/}">CheckOut</a></button>
+        </div>
+        <div class="row">
+            <button type="button" class="btn btn-default"><a href="#" th:href="@{/sale/freeSale/}">freeSale</a></button>
         </div>
     </div>
 
