--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 <head lang="en">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -16,9 +17,10 @@
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#" th:href="@{/}">Home</a>
                     <ul class="nav navbar-nav">
-                        <li><a href="#" th:href="@{/users}">User</a></li>
+                        <li th:if="${#request.isUserInRole('ADMIN')}"><a href="#" th:href="@{/users}">User</a></li>
                         <li><a href="#" th:href="@{/customers}">Customer</a></li>
                         <li><a href="#" th:href="@{/products}">Product</a></li>
+                        <li><a href="#" th:href="@{/logout}" methods="post">Log out</a></li>
                     </ul>
                 </div>
             </div>
