--- a/src/main/resources/templates/customers.html
+++ b/src/main/resources/templates/customers.html
@@ -8,7 +8,7 @@
 <div class="container">
     <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
     <div th:if="${not #lists.isEmpty(customers)}">
-        <h2>Employee List</h2>
+        <h2>Customer List</h2>
         <table class="table table-striped">
             <tr>
                 <th>Id</th>
