--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -27,17 +27,17 @@
                 </div>
             </div>
         </nav>
-            <!--<div class="jumbotron">-->
-                <!--<div class="row text-center">-->
-                    <!--<div class="">-->
-                        <!--<h2>Coffee Shop</h2>-->
-                        <!--<h3>Hola</h3>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="row text-center">-->
-                    <!--<img src="../../static/images/boot.png" width="200" th:src="@{/images/boot.png}"/>-->
-                <!--</div>-->
-            <!--</div>-->
+            <div class="jumbotron" th:if="${!#request.isUserInRole('ADMIN') and !#request.isUserInRole('USER')}">
+                <div class="row text-center">
+                    <div class="">
+                        <h2>Coffee Shop</h2>
+                        <h3>Hola</h3>
+                    </div>
+                </div>
+                <div class="row text-center">
+                    <img src="../../static/images/boot.png" width="400" th:src="@{static/images/coffee.jpg}"/>
+                </div>
+            </div>
     </div>
 </div>
 </body>
