main page create

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div class="row text-center">
-                    <img src="../../static/images/boot.png" width="400" th:src="@{static/images/coffee.jpg}"/>
+                    <img src="../../static/images/coffee.png" width="400" th:src="@{/images/coffee.png}" />
                 </div>
             </div>
     </div>
