--- a/src/main/resources/templates/userForm.html
+++ b/src/main/resources/templates/userForm.html
@@ -9,6 +9,7 @@
 <body>
 <div class="container">
     <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
+    <div class="alert alert-info" th:if="${errorMsg}" th:utext="${errorMsg}"></div>
     <h2>Edit</h2>
     <div>
         <form class="form-horizontal" th:object="${user}" th:action="@{/user}" method="post">
