alert free sale; free sale bug fix; certain period sale

--- a/src/main/resources/templates/salePage.html
+++ b/src/main/resources/templates/salePage.html
@@ -70,6 +70,7 @@
         <div class="row">
             <button type="button" class="btn btn-default"><a href="#" th:href="@{/sale/checkout/}">CheckOut</a></button>
         </div>
+        <div class="alert alert-info" th:if="${alertMessage}" th:utext="${alertMessage}"></div>
         <div class="row">
             <button type="button" class="btn btn-default"><a href="#" th:href="@{/sale/freeSale/}">freeSale</a></button>
         </div>
