--- a/src/main/resources/templates/trans.html
+++ b/src/main/resources/templates/trans.html
@@ -55,7 +55,12 @@
                 <td th:text="${countInYear}">One Month</td>
             </tr>
         </table>
+        <div class="row">
+            <button type="button" class="btn btn-default"><a href="#" th:href="@{/trans/period}">Calculate product total in certain period</a></button>
+        </div>
     </div>
+
+
 
 </div>
 
