--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -31,7 +31,7 @@
                 <div class="row text-center">
                     <div class="">
                         <h2>Coffee Shop</h2>
-                        <h3>Hola</h3>
+                        <h4>Welcome!</h4>
                     </div>
                 </div>
                 <div class="row text-center">
