--- a/src/main/resources/templates/cusForm.html
+++ b/src/main/resources/templates/cusForm.html
@@ -34,13 +34,13 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label">Total Points:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{totPoint}"/>
+                    <input type="text" class="form-control" th:field="*{fakeTot}"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Available Points:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fakeTot}"/>
+                    <input type="text" class="form-control" th:field="*{avaPoint}"/>
                 </div>
             </div>
             <div class="form-group">
